--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <div class="d-block w-100">
                                     <!-- card group-->
                                     <div class="card-deck">
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/acconciatura sposa.jpg" class="card-img-top"
                                                 alt="Acconciatura sposa">
                                             <div class="card-body">
@@ -244,7 +244,7 @@
                                                     Acconciatura sposa</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/light blonde.jpg" class="card-img-top"
                                                 alt="Light blonde">
                                             <div class="card-body">
@@ -253,13 +253,14 @@
                                                     Light blonde</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/velature bionde.jpg" class="card-img-top velature"
                                                 alt="Velature bionde">
                                             <div class="card-body">
                                                 <h5 class="card-title"
                                                     style="font-size: 18px;color:#300033;font-family:Playfair Display;">
-                                                    Velature bionde</h5>
+                                                    Velature
+                                                     bionde</h5>
                                             </div>
                                         </div>
 
@@ -271,7 +272,7 @@
                                 <div class="d-block w-100">
                                     <!-- card group-->
                                     <div class="card-deck">
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/biondo caldo.jpg" class="card-img-top"
                                                 alt="Biondo caldo">
                                             <div class="card-body">
@@ -280,7 +281,7 @@
                                                     Biondo caldo</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/pastello.jpg" class="card-img-top" alt="Pastello">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -288,7 +289,7 @@
                                                     Pastello</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/platino.jpg" class="card-img-top" alt="Pastello">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -304,7 +305,7 @@
                                 <div class="d-block w-100">
                                     <!-- card group-->
                                     <div class="card-deck">
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/cioccolato.jpg" class="card-img-top" alt="Cioccolato">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -312,7 +313,7 @@
                                                     Cioccolato</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/gianduia.jpg" class="card-img-top" alt="Gianduia">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -320,7 +321,7 @@
                                                     Gianduia</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/red.jpg" class="card-img-top red" alt="Red">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -335,7 +336,7 @@
                                 <div class="d-block w-100">
                                     <!-- card group-->
                                     <div class="card-deck">
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/bob.jpg" class="card-img-top" alt="Bob">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -343,7 +344,7 @@
                                                     Bob</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/contrasti.jpg" class="card-img-top" alt="Contrasti">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -351,7 +352,7 @@
                                                     Contrasti</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/sfumando.jpg" class="card-img-top" alt="Sfumando">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -366,7 +367,7 @@
                                 <div class="d-block w-100">
                                     <!-- card group-->
                                     <div class="card-deck">
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/stravaganze.jpg" class="card-img-top"
                                                 alt="Stravaganze">
                                             <div class="card-body">
@@ -375,7 +376,7 @@
                                                     Stravaganze</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/waves2.jpg" class="card-img-top img-responsive" alt="Waves">
                                             <div class="card-body">
                                                 <h5 class="card-title"
@@ -383,7 +384,7 @@
                                                     Waves</h5>
                                             </div>
                                         </div>
-                                        <div class="card">
+                                        <div class="card card-resp">
                                             <img src="img/gallery/semi raccolto.jpg" class="card-img-top img-responsive"
                                                 alt="Semi raccolto">
                                             <div class="card-body">
@@ -399,19 +400,19 @@
                             <div class="d-block w-100 ">
                                 
                                 <div class="card-deck">
-                                    <div class="card">
+                                    <div class="card card-resp">
                                         <img src="img/gallery/waves.jpg" class="card-img-top img-responsive" alt="Waves">
                                         <div class="card-body">
                                             <h5 class="card-title" style="font-size: 18px;color:#300033;font-family:Playfair Display;">Waves</h5>
                                         </div>
                                     </div> 
-                                    <div class="card">
+                                    <div class="card card-resp">
                                         <img src="img/gallery/stravaganze2.jpg" class="card-img-top img-responsive" alt="Stravaganze">
                                         <div class="card-body">
                                             <h5 class="card-title" style="font-size: 18px;color:#300033;font-family:Playfair Display;">Stravaganze</h5>
                                         </div>
                                     </div>
-                                    <div class="card">
+                                    <div class="card card-resp">
                                         <img src="img/gallery/BlondePlatinum.jpeg" class="card-img-top img-responsive platinum" alt="Blonde platinum">
                                         <div class="card-body">
                                             <h5 class="card-title" style="font-size: 18px;color:#300033;font-family:Playfair Display;">Blonde platinum</h5>
