--- a/index.html
+++ b/index.html
@@ -97,14 +97,15 @@
                         </div>
                     </div>
                 </div>
-                <div style="margin-top: 2cm;" class="col-xl-6 col-lg-6">
+                <div style="margin-top: 4cm;" class="col-xl-6 col-lg-6">
                     <div class="about_info">
-                        <div class="section_title mb-20px">
-                            <h3>Chi sono </h3>
-                        </div>
-                        <p>Inspires employees and organizations to support causes they care <br>
-                            about. We do this to bring more resources to the nonprofits that are <br>
-                            changing our world.</p>
+                        <p>Una delle Emozioni che i clienti cercano da un parrucchiere , è La Soddisfazione!<br>
+                            La Ricerca della Soddisfazione  è  la filosofia di Satisfaction Hairdesigner. 
+                            Satisfaction Hairdesigner  Nasce dalla voglia di mettersi in gioco , esternando il proprio stile, mettendo in pratica le esperienze lavorative maturate nel tempo collaborando con maestri del settore  e frequentando percorsi formativi  con stilisti di fama mondiale. 
+                            Satisfaction Hairdesigner 
+                            Prende forma nel Gennaio 2011 in Pieno Centro ad Andria ; 
+                            Ad oggi il mio impegno principale è  quello di risolvere Esigenze Tecniche e Colorimetriche atte al raggiungimento della soddisfazione dei miei clienti. 
+                            Dopo 10 Anni di attività imprenditoriale la dedizione per il mio lavoro è sempre più presente , accompagnata da Esperienza e Consapevolezza,  portandomi ad avere un continuo bisogno di ricerca tecnica e stilistica , affiancato anche dall'utilizzo  di Prodotti Cosmetici di Alta qualità e Tecnologicamente Avanzati .</p>
                         <div class="socail_links d-inline-block ">
                             <ul>
                                 <li class="d-inline-block">
